--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
     @media (prefers-color-scheme: light){ :root:not([data-theme]){ --bg:#f8fafc; --fg:#0b1220; --muted:#5c6b80; --card:#ffffff; --bd:#e5eaf0; --accent:#2f7ef9; --accent-2:#17c297; --shadow: 0 8px 30px rgba(17, 24, 39, .08);} }
     @media (prefers-color-scheme: dark){ :root:not([data-theme]){ --bg:#0b0f14; --fg:#e9eef7; --muted:#9fb3c8; --card:#0f151d; --bd:#1d2633; --accent:#7bd6ff; --accent-2:#8ae9b3; --shadow: 0 6px 20px rgba(0,0,0,.25);} }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0; font:16px/1.7 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; background:radial-gradient(1200px 700px at 10% -10%, rgba(123,214,255,.12), transparent 60%), radial-gradient(800px 500px at 90% 10%, rgba(138,233,179,.12), transparent 55%), var(--bg); color:var(--fg)}
+    html,body{margin:0; font:16px/1.7 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    background:
+      radial-gradient(1200px 700px at 10% 0, rgba(123,214,255,.12), transparent 60%),
+      radial-gradient(900px 540px at 100% 0, rgba(138,233,179,.12), transparent 55%),
+      var(--bg);
+    background-attachment: fixed;
+    color:var(--fg)
+    }
     .wrap{max-width:1080px; margin:0 auto; padding:28px 20px 80px}
     header{display:flex; align-items:center; gap:18px; margin-bottom:26px}
     .avatar{width:88px; height:88px; border-radius:50%; border:1px solid var(--bd); background:linear-gradient(135deg, var(--card), rgba(255,255,255,.04)); box-shadow:var(--shadow); display:grid; place-items:center; font-weight:700; letter-spacing:.5px}
