--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,10 +31,10 @@
     html{margin:0; background: var(--bg);} 
     body{margin:0; font:16px/1.7 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     background:
-      radial-gradient(1200px 700px at 10% -140px, rgba(123,214,255,.12), transparent 60%),
-      radial-gradient(900px 540px at 100% -120px, rgba(138,233,179,.12), transparent 55%),
+      radial-gradient(1200px 700px at 10% 0, rgba(123,214,255,.12), transparent 60%),
+      radial-gradient(1100px 650px at 100% 0, rgba(138,233,179,.12), transparent 55%),
       var(--bg);
-    background-attachment: fixed;
+    /* background-attachment: fixed; removed to avoid banding */
     background-repeat: no-repeat;
     color:var(--fg)
     }
